added font icons

--- a/wp-content/themes/webzine/_sass/jiboneus.scss
+++ b/wp-content/themes/webzine/_sass/jiboneus.scss
@@ -1,6 +1,7 @@
 /* Main styles */
 
 @import 'vendor/bootstrap/_bootstrap.min';
+@import '_icons';
 
 $sans_font: "Source Sans Pro","Myriad Pro","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
 $serif_font: "Fauna One", Georgia, Cambria, "Times New Roman", Times, serif;
