added social links on sidebar

--- a/wp-content/themes/webzine/views/layouts/home.html
+++ b/wp-content/themes/webzine/views/layouts/home.html
@@ -65,18 +65,16 @@
             </div>
 
           </div>
-          <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
+          <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 sidebar-container">
             
-            <h4 class="sidebar-title">Updates</h4>
+            <h4 class="sidebar-title">&mdash; &nbsp;Follow Us&nbsp; &mdash;</h4>
             
-            {{#content.news_post}}
-            <div class="news-container">
-              <p><span class="title">{{title}}</span> <span class="dashed">&mdash;</span></p>
-              {{{content}}}
-              <p><span class="dashed">&mdash;</span> <span class="date">{{date}}</span> <span class="dashed">&mdash;</span> <a href="{{src_link}}">{{src_name}}</a></p>
+            <div class="social-bar-panel social-links">
+              <a href="https://facebook.com/jiboneus" class="icon-facebook-rect"></a>
+              <a href="http://twitter.com/jiboneus" class="icon-twitter-bird"></a>
+              <a href="http://instagram.com/jiboneus" class="icon-instagram-filled"></a>
+              <a href="http://updates.jiboneus.com" class="icon-tumblr-rect"></a>
             </div>
-
-            {{/content.news_post}}
             
             <div class="news-container">
               <p class="lead">Have an event you want us to plug? Have a video to show us? Send us a tip - <em>editors @ jiboneus.com</em></p>
