--- a/wp-content/themes/webzine/views/partials/header_html.html
+++ b/wp-content/themes/webzine/views/partials/header_html.html
@@ -2,7 +2,7 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" prefix="og: http://ogp.me/ns#"> <!--<![endif]-->
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -11,6 +11,27 @@
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+
+    {{#og}}
+    <!-- Open Graph Tags -->
+    <meta property="og:title" content="{{ title }}" />
+    <meta property="og:site_name" content="{{ site_name }}" />
+    <meta property="og:description" content="{{ description }}" />
+    <meta property="og:type" content="{{ type }}" />
+    <meta property="og:url" content="{{ url }}" />
+    <meta property="og:image" content="{{ image }}" />
+    {{/og}}
+
+    {{#tw}}
+    <!-- Twitter Card Tags -->
+    <meta name="twitter:card" content="{{ card }}" />
+    <meta name="twitter:site" content="{{ site }}" />
+    <meta name="twitter:creator" content="{{ creator }}" />
+    <meta name="twitter:title" content="{{ title }}" />
+    <meta name="twitter:description" content="{{ description }}" />
+    <meta name="twitter:image" content="{{ image }}" />
+    {{/tw}}
+
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,700italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Fauna+One' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ assets.css }}">
