--- a/wp-content/themes/webzine/views/partials/footer.html
+++ b/wp-content/themes/webzine/views/partials/footer.html
@@ -9,4 +9,15 @@
         </div>
       </div>
     </div><!-- footer content container ends -->
-
+    
+    <!-- Javascripts -->
+    <div id="fb-root"></div>
+    <script>
+      (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=123237414383077";
+      fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
